--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Spin-off of "Project: Event invite"</title>
+        <title>CYF/Khan Project: Event invite</title>
         <style>
            body{
                background-color: rgb(8, 4, 8); 
